Update VcfResultsWriter to cleanly handle failures writing unsupported VCF 4.3+ file formats.